--- a/src/stylesheets/main.styl
+++ b/src/stylesheets/main.styl
@@ -1,7 +1,5 @@
 @import "lib/vars"
-
-//@import "vendor/animate"
-
+@import "vendor/animate"
 @import "modules/hand"
 @import "modules/card"
 @import "modules/card_graphics"
