--- a/src/templates/scripts.jade
+++ b/src/templates/scripts.jade
@@ -1,3 +1,3 @@
 script(src='//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.min.js')
-script(src='/assets/js/blackjack.js')
-script(src='/assets/js/tests.js')
+script(src='assets/js/blackjack.js')
+script(src='assets/js/tests.js')
