--- a/src/templates/layout.jade
+++ b/src/templates/layout.jade
@@ -5,7 +5,7 @@ html(lang="en")
       title Untitled
 
     meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
-    link(rel='stylesheet', href='/assets/css/main.css')
+    link(rel='stylesheet', href='assets/css/main.css')
     link(href='http://fonts.googleapis.com/css?family=Oswald:300', rel='stylesheet', type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css')
 
