Add sounds and flip animation

--- a/src/index.jade
+++ b/src/index.jade
@@ -4,4 +4,14 @@ block title
     title JSblackjack 2
 
 block content
+    .sounds-switch
+        label(for="sounds") Sounds
+        input#sounds(type="checkbox")
+
+    .credits
+        span.by Designed and built by 
+            a(href="//github.com/vctrfrnndz") @vctrfrnndz
+            |. See the source on 
+            a(href="//github.com/vctrfrnndz/JSblackjack2") Github
+            |.
     .js-blackjack
