--- a/src/stylesheets/lib/vars.styl
+++ b/src/stylesheets/lib/vars.styl
@@ -11,6 +11,7 @@ color_button_text = #675374
 color_button_bg = white
 color_hit = #CD77FF
 color_stand = #23D0B6
+color_restart = #69db73
 
 diamond = '\2666'
 spade = '\2660'
