--- a/src/stylesheets/modules/card.styl
+++ b/src/stylesheets/modules/card.styl
@@ -91,3 +91,36 @@
     width: 100%;
     height: 100%;
     opacity: 0.95;
+    
+.flip-card-container
+  display: inline-block;
+  position: relative;
+  width: card_w;
+  height: card_h;
+  perspective: 800px;
+  z-index: 400;
+  
+  &.reveal .bounds
+    transform: rotateY(180deg);
+  
+  .bounds 
+    background: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+    
+    [data-card]
+      display: block;
+      position: absolute;
+      top: auto;
+      left: auto;
+      z-index: auto !important;
+      margin: 0 !important;
+      backface-visibility: hidden;
+      
+      & + [data-card]
+        transform: rotateY(180deg);
+        -webkit-animation: none;
+        animation: none;
