small css adjust

--- a/src/stylesheets/main.styl
+++ b/src/stylesheets/main.styl
@@ -44,6 +44,9 @@ a
     top: 10px;
     left: 10px;
     z-index: 1;
+    text-align: center;
+    width: 100%;
+    margin-left: -10px;
     
     label
         color: white;
