--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6893,6 +6893,9 @@ a {
   top: 10px;
   left: 10px;
   z-index: 1;
+  text-align: center;
+  width: 100%;
+  margin-left: -10px;
 }
 .sounds-switch label {
   color: #fff;
