--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6760,7 +6760,7 @@ Copyright (c) 2015 Daniel Eden
 }
 .controls {
   position: absolute;
-  bottom: 50px;
+  bottom: 60px;
   left: 0;
   text-align: center;
   width: 100%;
@@ -6876,14 +6876,19 @@ a {
 }
 .credits {
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   right: 10px;
   z-index: 1;
   color: #fff;
-  font-size: 11px;
+  font-size: 10px;
   width: 100%;
   text-align: center;
   padding-left: 20px;
+}
+.credits .by {
+  padding: 10px 15px;
+  border-radius: 20px;
+  background: rgba(0,0,0,0.17);
 }
 .credits span {
   opacity: 0.7;
@@ -6925,7 +6930,7 @@ a {
 .js-blackjack {
   overflow: hidden;
   position: relative;
-  min-height: 525px;
+  min-height: 613px;
   background: #4b3f64;
   height: 100vh;
   width: 100vw;
