--- a/src/stylesheets/main.styl
+++ b/src/stylesheets/main.styl
@@ -7,79 +7,84 @@
 @import "modules/indicator"
 
 html
-    box-sizing: border-box;
+  box-sizing: border-box;
 
 *, *:before, *:after
-    box-sizing: inherit;
+  box-sizing: inherit;
 
 body
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    font-family: 'Roboto', sans-serif;
-    position: relative;
-    
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
+  position: relative;
+  
 a 
-    color: white;
+  color: white;
     
 .hide 
-    display: none;
+  display: none;
        
 .credits
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    z-index: 1;
-    color: white;
-    font-size: 11px;
-    width: 100%;
-    text-align: center;
-    padding-left: 20px;
-    
-    span
-        opacity: 0.7;
-    
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+  z-index: 1;
+  color: white;
+  font-size: 10px;
+  width: 100%;
+  text-align: center;
+  padding-left: 20px;
+  
+  .by 
+    padding: 10px 15px;
+    border-radius: 20px;
+    background: rgba(0, 0, 0, 0.17);
+  
+  span
+    opacity: 0.7;
+  
 .sounds-switch
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 1;
-    text-align: center;
-    width: 100%;
-    margin-left: -10px;
-    
-    label
-        color: white;
-        font-size: 13px;
-        margin-right: 5px;
-        letter-spacing: 2px;
-        opacity: 0.7;
-        text-transform: uppercase;
-        
-    input
-        -webkit-appearance: none;
-        height: 12px;
-        width: 12px;
-        background: none;
-        border-radius: 50%;
-        border: 1px solid white;
-        position: relative;
-        top: 4px;
-        opacity: 0.5;
-        outline: none;
-        
-        &:checked
-            opacity: 1;
-            border: 0;
-            background: color_restart;
-    
-.js-blackjack
-    overflow: hidden;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 1;
+  text-align: center;
+  width: 100%;
+  margin-left: -10px;
+  
+  label
+    color: white;
+    font-size: 13px;
+    margin-right: 5px;
+    letter-spacing: 2px;
+    opacity: 0.7;
+    text-transform: uppercase;
+      
+  input
+    -webkit-appearance: none;
+    height: 12px;
+    width: 12px;
+    background: none;
+    border-radius: 50%;
+    border: 1px solid white;
     position: relative;
-    min-height: round(card_h * 3);
-    background: color_game_bg;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
-    background: -webkit-linear-gradient(45deg, #5f2c82 10%, #49a09d 90%); 
-    background: linear-gradient(45deg, #5f2c82 10%, #49a09d 90%); 
+    top: 4px;
+    opacity: 0.5;
+    outline: none;
+      
+    &:checked
+      opacity: 1;
+      border: 0;
+      background: color_restart;
+  
+.js-blackjack
+  overflow: hidden;
+  position: relative;
+  min-height: round(card_h * 3.5);
+  background: color_game_bg;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  background: -webkit-linear-gradient(45deg, #5f2c82 10%, #49a09d 90%); 
+  background: linear-gradient(45deg, #5f2c82 10%, #49a09d 90%); 
